--- a/WebSites/Services.html
+++ b/WebSites/Services.html
@@ -104,7 +104,7 @@
         </div>
     </div>
 
-    <!-- Modal para tutorial de Puerta -->
+    <!-- Modal para tutorial de Cafetera -->
     <div id="door-tutorial-modal" class="video-tutorial-modal modal">
         <div class="modal-content video-modal-content">
             <div class="modal-header">
@@ -113,8 +113,10 @@
             </div>
             <div class="modal-body">
                 <div class="video-container">
-                    <!-- Reemplazar con iframe de YouTube -->
-                    <iframe width="100%" height="315" src="https://youtube.com/embed/8shuatq3vgs" title="Tutorial de Puerta" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <video class="tutorial-video" controls>
+                        <source src="../Resources/AmapolaTuto/Puerta.mp4" type="video/mp4">
+                        Tu navegador no soporta videos HTML5.
+                    </video>
                 </div>
             </div>
         </div>
@@ -138,7 +140,7 @@
         </div>
     </div>
 
-    <!-- Modal para tutorial de Aire -->
+    <!-- Modal para tutorial de Cafetera -->
     <div id="air-tutorial-modal" class="video-tutorial-modal modal">
         <div class="modal-content video-modal-content">
             <div class="modal-header">
@@ -147,8 +149,10 @@
             </div>
             <div class="modal-body">
                 <div class="video-container">
-                    <!-- Reemplazar con iframe de YouTube -->
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/KRV6uKfLGTg" title="Tutorial de Aire Acondicionado" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <video class="tutorial-video" controls>
+                        <source src="../Resources/AmapolaTuto/Aire.mp4" type="video/mp4">
+                        Tu navegador no soporta videos HTML5.
+                    </video>
                 </div>
             </div>
         </div>
