--- a/WebSites/Contact.html
+++ b/WebSites/Contact.html
@@ -59,11 +59,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p>amapolas30.airbnb@gmail.com</p>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <p>+52 (868) 123-4567</p>
+                    <p>reservaciones@comfortproperty.mx</p>
                 </div>
             </div>
             <div id="map" class="contact-map"></div>
